--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -60,7 +60,7 @@
         android:layout_width="326dp"
         android:layout_height="57dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/edittext_shape"
         app:boxStrokeWidth="0dp"
@@ -153,12 +153,14 @@
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/textView167"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_regular"
         android:text="Or"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/Tvalreadyhaveaccount"
         app:layout_constraintStart_toStartOf="@+id/Tvalreadyhaveaccount"
         app:layout_constraintTop_toBottomOf="@+id/Tvalreadyhaveaccount" />
@@ -168,7 +170,7 @@
         android:layout_width="150dp"
         android:layout_height="33dp"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/white_button"
         android:drawableLeft="@drawable/facebook"
         android:fontFamily="@font/lato_regular"
@@ -182,7 +184,7 @@
         android:layout_width="150dp"
         android:layout_height="33dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/white_button"
         android:drawableLeft="@drawable/google"
         android:fontFamily="@font/lato_regular"
@@ -195,7 +197,7 @@
         android:id="@+id/createButton"
         android:layout_width="157dp"
         android:layout_height="57dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/red_button"
         android:fontFamily="@font/yeon_sung_regular"
         android:text="Create Account"
@@ -209,7 +211,7 @@
         android:id="@+id/Tvalreadyhaveaccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_regular"
         android:text="Already Have An Account?"
         android:textColor="@color/textColour"
