--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,12 +76,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/attention"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
-                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="@+id/PendingOrderButton"
+                app:layout_constraintStart_toStartOf="@+id/PendingOrderButton"
                 app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/PendingOrderButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -89,6 +89,7 @@
                 android:text="Pending Order"
                 android:textColor="@color/textColour"
                 android:textSize="20sp"
+                android:clickable="true"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
@@ -102,9 +103,9 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
-                app:layout_constraintStart_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                app:layout_constraintEnd_toEndOf="@+id/PendingOrderButton"
+                app:layout_constraintStart_toStartOf="@+id/PendingOrderButton"
+                app:layout_constraintTop_toBottomOf="@+id/PendingOrderButton" />
 
 
             <ImageView
@@ -128,7 +129,7 @@
                 android:textColor="@color/textColour"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView7"
-                app:layout_constraintStart_toEndOf="@+id/textView5"
+                app:layout_constraintStart_toEndOf="@+id/PendingOrderButton"
                 app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
 
